04_network_policy/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
   name: deny-all
   namespace: workshp
   labels:
      name: deny-all
spec:
   podSelector:
      matchLabels:
         name: fortune-pod
   policyTypes:
   - Ingress
   - Egress
